<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PeekBite</string>
    <string name="action_settings">Settings</string>
    <string name="username_tv">Username</string>
    <string name="password_tv">Password</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_frongpage">Front page</string>
    <string name="title_activity_my_profile">Profile page</string>
    <string name="title_activity_my_order_history">Order History page</string>
    <!-- Nan Edit -->
    <string name="title_activity_confirm_share">Confirm Sharing on Facebook</string>
    <string name="title_activity_change_password">Change User Password</string>    
    
    
    <string name="rememberPwd">Remember Password</string>
    <string name="title_activity_registration_finished">RegistrationFinished</string>
    
    <!-- Nan Edit -->
    
    <string name="SignUpLinkText">Don\'t have an account? Sign up here</string>
    <string name="loginText">Log in</string>
    <string name="pkLogoDescription">peekBite Logo</string>
    
    
    <string name="checkBoxText_Accept">Accept Terms and Conditions</string>
    <string name="buttonText_Signup">Sign Up</string>
    
    
    <string name="register_success_User">User : </string>
    <string name="register_success_Email">Email : </string>
    
    <string name="scanQRText">Scan e-menu</string>
    <string name="myProfileText">My Profile</string>
    <string name="myOrderHistoryText">My Orders</string>
    
    <string name="history_order_id_text">Order ID: </string>
	<string name="history_order_date_text">Order Date: </string> 
	<string name="history_rest_name_text">Restuarant: </string>
	
	<string name="profile_title">Profile</string>
	<string name="profile_username_title">User Name: </string>
	<string name="profile_username">Robin@gmail.com</string>
	<string name="profile_button">Change Password</string>
	
	<string name="history_dishname_title">Dish</string>
	<string name="history_dishprice_title">Price</string>
	<string name="app_id">841731002508186</string>

</resources>
