<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Blue" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/profile_title"
       	android:textColor="@color/White"
        android:textSize="18sp"/>   
         
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/White"
	    android:textSize="14sp"
        android:text="@string/profile_username_title"/>
    
    <TextView
        android:id="@+id/profile_username_text"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp"
	    android:textColor="@color/White"
	    android:textSize="12sp"
	    android:text="@string/profile_username"/>
    
    <Button
        android:id="@+id/profile_change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:background="@drawable/rounded_button_yellow"
		android:textSize="12sp"
		android:textColor="@color/Blue"
        android:text="@string/profile_button" />
    

</LinearLayout>
