<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" >
	
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >
        
        <TextView 
            android:id="@+id/history_order_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/history_order_id_text" />
        
        <TextView 
            android:id="@+id/history_order_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/history_order_date_text" />
    </LinearLayout>
    
    <TextView 
        android:id="@+id/history_rest_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom ="10dp"
        android:textSize="14sp"
        android:text="@string/history_rest_name_text" />
    
	<LinearLayout 
		android:id="@+id/history_item_dishes_title_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="2dp"
		android:orientation="horizontal" >
       	
       	<TextView 
            android:id="@+id/history_dishname_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="14sp"
            android:text="@string/history_dishname_title" />
        
        <TextView 
            android:id="@+id/history_dishprice_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="155dp"
            android:textSize="14sp"
            android:text="@string/history_dishprice_title" />	        
    </LinearLayout>
	    
    <LinearLayout 
        android:id="@+id/history_item_dishes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical" >	        
    </LinearLayout>

</LinearLayout>
